# PortfolioDrawdownMonteCarlo

./: .gitignore  Dockerfile  Dockerfile-build  README.md  REFLECTIONS.md  TENETS.md  allocation.tsx  build.sh  charts.tsx  debug.sh  deno.json  dotNetMonteCarloShardWorker.ts  dotNetMonteCarloWorker.ts  goMonteCarloShardWorker.ts  goMonteCarloWorker.ts  index.html  index2.html  main.ts  monteCarlo.ts  monteCarloAnalysisWorker.ts  monteCarloApp.tsx  monteCarloShardWorker.ts  monteCarloWorker.ts  monteCarloWorkerMessages.ts  package-lock.json  package.json  rustMonteCarloShardWorker.ts  rustMonteCarloWorker.ts  snowpack.config.js  style.css  tsconfig.json  webpack.config.js
.devcontainer/: .env.example  Dockerfile  devcontainer.json
data/: README.md  historicalMarketData.json  historicalMarketData.original.json
devops/: build.sh
drawdown_dotnet/: DrawdownDotNet.csproj  MonteCarlo.cs  Program.cs
drawdown_go/: .gitignore  drawdown_go  go.mod  main.go  main_wasm.go  monteCarlo.go  monteCarlo_test.go
drawdown_rust/: Cargo.toml  main.rs  montecarlo.rs
drawdown_rust/src/: algorithm.rs  bridge_generated.io.rs  bridge_generated.rs  historicaldata.rs  lib.rs  main.rs
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart  montecarlo_bridge.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt  rust.cmake
src/: allocation.tsx  charts.tsx  index.html  monteCarlo.ts  monteCarloApp.tsx  monteCarloWorker.ts  monteCarloWorkerTypes.ts
(+11 files in other folders)
