[package]
name = "drawdown_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.54.1"
rand = "0.8.5"
rayon = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order", "float_roundtrip"] }

[[bin]]
name = "drawdown_rust"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "montecarlo"